tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_error_on_cast_over_type_variable/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type Field, found type str<1>
  ┌─ src/main.nr:8:44
  │
8 │         let _: Field = foo(|x| x as Field, x);
  │                                            -
  │

Aborting due to 1 previous error
