tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_error_on_cast_over_type_variable/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type Field, found type str<1>
  ┌─ src/main.nr:8:44
  │
8 │         let _: Field = foo(|x| x as Field, x);
  │                                            -
  │

Aborting due to 1 previous error
